apps/opentelemetry-demo/opentelemetry-demo-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opentelemetry-demo-route
  namespace: opentelemetry-demo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`opentelemetry-demo.{domain:[a-z\.]+}`)
      services:
        - name: opentelemetry-demo-frontendproxy
          port: 8080
  tls:
    secretName: opentelemetry-demo-route-tls
